--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2730,7 +2730,7 @@
 					}
 
 			.tiles article.style1 > .image:before {
-				background-color: #f2849e;
+				background-color: #55486e;
 			}
 
 			.tiles article.style2 > .image:before {
