--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2734,11 +2734,11 @@
 			}
 
 			.tiles article.style2 > .image:before {
-				background-color: #7ecaf6;
+				background-color: #55486e;
 			}
 
 			.tiles article.style3 > .image:before {
-				background-color: #7bd0c1;
+				background-color: #55486e;
 			}
 
 			.tiles article.style4 > .image:before {
