--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1896,8 +1896,8 @@
 			}
 
 			.icon.style2:hover {
-				color: #f2849e;
-				border-color: #f2849e;
+				color: #55486e;
+				border-color: #55486e;
 			}
 
 			.icon.style2:active {
@@ -2177,8 +2177,8 @@
 		input[type="tel"]:focus,
 		select:focus,
 		textarea:focus {
-			border-bottom-color: #f2849e;
-			box-shadow: inset 0 -1px 0 0 #f2849e;
+			border-bottom-color: #55486e;
+			box-shadow: inset 0 -1px 0 0 #55486e;
 		}
 
 	.select-wrapper {
@@ -2288,8 +2288,8 @@
 
 		input[type="checkbox"]:focus + label:before,
 		input[type="radio"]:focus + label:before {
-			border-color: #f2849e;
-			box-shadow: 0 0 0 1px #f2849e;
+			border-color: #55486e;
+			box-shadow: 0 0 0 1px #55486e;
 		}
 
 	input[type="checkbox"] + label:before {
@@ -2509,7 +2509,7 @@
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			color: #f2849e !important;
+			color: #55486e !important;
 			box-shadow: inset 0 0 0 2px #f2849e;
 		}
 
@@ -2552,7 +2552,7 @@
 			input[type="button"].special:hover,
 			button.special:hover,
 			.button.special:hover {
-				background-color: #f2849e;
+				background-color: #55486e;
 			}
 
 			input[type="submit"].special:active,
